--- a/client/src/App.css
+++ b/client/src/App.css
@@ -52,21 +52,23 @@ html, body, div#root{
 .track-container{
   display: flex;
   flex-direction: column;
-  background-color: #827397;
+  border-radius: 5px;
+  background-color: #4D4C7D;
   height: 100%;
   width: 350px;
   overflow: auto;
+  padding-top: 5px;
 }
 .track-element{
   border: solid;
   border-width: 2px;
   border-radius: 7px;
-  margin: 2px;
+  margin: 2px 5px 2px 5px;
   padding-left: 10px;
   overflow:hidden unset;
   white-space: nowrap;
   text-overflow: ellipsis;
-  background-color: lightgrey;
+  background-color: #E9D5DA;
 }
 .track-element:hover{
   background-color: grey;
@@ -80,13 +82,15 @@ html, body, div#root{
 }
 .new-track-button{
   height:100%;
-  margin-right: 10px;
   margin-top: 5px;
 }
 .song-submit-container{
-  background: #4D4C7D;
+  background: #363062;
   width: 360px;
   height: 160px;
+  margin-left: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   display: flex;
   flex-direction: column;
   overflow: auto;
@@ -124,10 +128,13 @@ html, body, div#root{
 .canvas-container{
   background-color: #E9D5DA;
   height: 100%;
+  border-radius: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center ;
+  justify-content: center;
 }
 canvas#visualizer-canvas{
   width: 100%;
@@ -219,11 +226,11 @@ canvas#visualizer-canvas{
 .sign-up-form{
   width: 380px;
   padding: 40px 30px 50px 30px;
-  background: #fff;
-  border: 3px solid black;
+  background: #E9D5DA;
+  border: 3px solid #4D4C7D;
   border-radius: 5px;
   text-align: center;
-  box-shadow: 10px 10px grey;
+  box-shadow: 10px 10px #363062;
 }
 .first-song-container{
   display: flex;
@@ -234,11 +241,11 @@ canvas#visualizer-canvas{
 .first-song-form{
   width: 380px;
   padding: 40px 30px 50px 30px;
-  background: #fff;
-  border: 3px solid black;
+  background: #E9D5DA;
+  border: 3px solid #4D4C7D;
   border-radius: 5px;
   text-align: center;
-  box-shadow: 10px 10px grey;
+  box-shadow: 10px 10px  #363062;
 }
 .first-song-form>input{
   margin: 10px;
